[package]
name = "modiom"
version = "0.2.1"
description = "command line tool for mod.io"
readme = "README.md"
repository = "https://github.com/nickelc/modiom"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "modiom"

[dependencies]
bytes = "1.0"
clap = "2"
dirs = { version = "2", package = "dirs-next" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
md-5 = "0.9"
nom = { version = "6", default-features = false, features = ["alloc"] }
pbr = "1"
serde = { version = "1", features = ["derive"] }
textwrap = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.6", features = ["io"] }
toml = "0.5"

[dependencies.modio]
version = "0.6"
default-features = false
features = ["rustls-tls"]

[dependencies.prettytable-rs]
version = "0.8"
default-features = false
