[package]
name = "modiom"
version = "0.5.0"
description = "command line tool for mod.io"
repository = "https://github.com/nickelc/modiom"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "modiom"

[dependencies]
bytes = "1.5.0"
clap = "4.5.1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
home = "0.5.9"
md-5 = "0.10"
nom = { version = "7.1", default-features = false, features = ["alloc"] }
prettytable-rs = { version = "0.10", default-features = false }
serde = { version = "1", features = ["derive"] }
textwrap = { version = "0.16", default-features = false, features = ["unicode-width", "smawk"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.12"

[dependencies.modio]
version = "0.10.1"
default-features = false
features = ["rustls-tls"]

[profile.release]
strip = true
