[package]
name = "modiom"
version = "0.5.2"
description = "command line tool for mod.io"
repository = "https://github.com/nickelc/modiom"
license = "MIT/Apache-2.0"
authors = ["Constantin Nickel <constantin.nickel@gmail.com>"]
keywords = ["modio", "cli"]
categories = ["command-line-utilities"]
edition = "2018"

[[bin]]
name = "modiom"

[dependencies]
bytes = "1.10.1"
clap = "4.5.32"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
home = "0.5.9"
md-5 = "0.10.6"
nom = { version = "7.1.3", default-features = false, features = ["alloc"] }
prettytable-rs = { version = "0.10.0", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
textwrap = { version = "0.16.2", default-features = false, features = ["unicode-width", "smawk"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7.14", features = ["io"] }
toml = "0.8.20"

[dependencies.modio]
version = "0.12.1"
default-features = false
features = ["rustls-tls"]

[profile.release]
strip = true
